# alicesw-web

./: .env  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
src-native/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
src-native/benchmark/: bench.ts
src-native/src/: epub.rs  lib.rs
src/lib/components/: Logo.svelte  ThemeSwitch.svelte
src/lib/server/: db.ts
src/lib/utils/: favorites.svelte.ts
src/routes/: +layout.svelte  +page.svelte  AuroraTitle.svelte  layout.css
src/routes/(main)/: +layout.svelte  +page.svelte
src/routes/(main)/[novelId]/: +page.server.ts  +page.svelte
src/routes/(main)/author/: +page.server.ts  +page.svelte
src/routes/(main)/content/: +page.server.ts  +page.svelte
src/routes/(main)/info/: +page.svelte
src/routes/(main)/random/: +page.svelte
src/routes/(main)/title/: +page.server.ts  +page.svelte
src/routes/(reader)/[novelId]/[chapterId]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/[novelId]/: +page.server.ts  +page.svelte
src/routes/[novelId]/[chapterId]/: +page.server.ts  +page.svelte  layout.server.ts
src/routes/api/epub/[id]/: +server.ts
src/routes/api/txt/novel/[id]/: +server.ts
src/routes/author/: +page.server.ts  +page.svelte
src/routes/content/: +page.server.ts  +page.svelte
src/routes/random/: +page.server.ts  +page.svelte
src/routes/search/: +page.server.ts  +page.svelte
src/routes/title/: +page.server.ts  +page.svelte
