
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "fts_native"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
epub-builder = "0.8.3"
napi = "3.0.0"
napi-derive = "3.0.0"
once_cell = "1.21.4"
sevenz-rust2 = "0.20.2"
tantivy = "0.26.1"
tantivy-jieba = "0.19.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
